force-app/main/default/objects/osf_Account_Mapping__mdt/osf_Account_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>osf Account Mapping</label>
    <pluralLabel>osf Accounts Mapping</pluralLabel>
</CustomObject>