force-app/main/default/objects/osf_Account_Mapping__mdt/fields/osf_Active__c.field-meta.xml
<CustomField>
    <fullName>osf_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>osf Active</label>
    <type>Checkbox</type>
</CustomField>