force-app/main/default/objects/osf_Account_Mapping__mdt/fields/osf_Email__c.field-meta.xml
<CustomField>
    <fullName>osf_Email__c</fullName>
    <label>osf Email</label>
    <type>Email</type>
</CustomField>