force-app/main/default/objects/osf_Account_Mapping__mdt/fields/osf_Fields_Map__c.field-meta.xml
<CustomField>
    <fullName>osf_Fields_Map__c</fullName>
    <label>osf Fields Map</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>