force-app/main/default/objects/osf_Account_Mapping__mdt/fields/osf_Last_Value__c.field-meta.xml
<CustomField>
    <fullName>osf_Last_Value__c</fullName>
    <label>osf Last Value</label>
    <type>DateTime</type>
</CustomField>