force-app/main/default/objects/osf_Account_Mapping__mdt/fields/osf_Target_Object__c.field-meta.xml
<CustomField>
    <fullName>osf_Target_Object__c</fullName>
    <label>osf Target Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>