force-app/main/default/objects/osf_Account_Mapping__mdt/fields/osf_Unique_Field__c.field-meta.xml
<CustomField>
    <fullName>osf_Unique_Field__c</fullName>
    <label>osf Unique Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>