force-app/main/default/objects/osf_Account_Mapping__mdt/listViews/osf_view.listView-meta.xml
<ListView>
    <fullName>osf_view</fullName>
    <columns>DeveloperName</columns>
    <columns>osf_Last_Value__c</columns>
    <columns>osf_Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>osf view</label>
</ListView>